--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "next": "14.2.5",
+    "openai": "^4.52.7",
     "react": "^18",
     "react-dom": "^18"
   },
